--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/kubernetes-helm
 {
-	"name": "SQL Injection Detection",
+	"name": "Unguard environment",
 	"dockerFile": "Dockerfile",
 
 	// do not change these if you want Docker in Docker support
@@ -42,13 +42,13 @@
 
 	// Add recommended secrets
 	"secrets": {
-	 	  "DT_ENV_ID_OBSLAB_SQL_INJECTION_DETECTION": {
+	 	  "DT_ENV_ID_OBSLAB_UNGUARD": {
 	 		"description": "eg. acb12345 from https://abc12345.live.dynatrace.com"
 		},
-		  "DT_ENVIRONMENT_OBSLAB_SQL_INJECTION_DETECTION": {
+		  "DT_ENVIRONMENT_OBSLAB_UNGUARD": {
 	    	        "description": "live, sprint or dev. Defaults to live"
 		},
-		  "DT_API_TOKEN_OBSLAB_SQL_INJECTION_DETECTION": {
+		  "DT_API_TOKEN_OBSLAB_UNGUARD": {
 			"description": "API token with entities.read, settings.read, settings.write, DataExport, InstallerDownload, activeGateTokenManagement.create, metrics.ingest"
 		  }
 	}
