--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,10 @@ nav:
     - "Command Injection": command-injection/index.md
     - "CRLF Injection": crlf-injection/index.md
     - "JWT Forgery": jwt-forgery/index.md
+    - "Log4Shell": log4shell/index.md
+    - "SSRF": ssrf/index.md
+    - "XSS Attacks": xss/index.md
+    - "ZIP Slip": zip-slip/index.md
   
   - 'Recap, Cleanup and Next Steps':
     - '8. Cleanup': cleanup.md
