--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,6 +57,8 @@ markdown_extensions:
   - admonition
   - pymdownx.details
   - pymdownx.superfences
+  - pymdownx.snippets:
+      base_path: ["docs"]
 plugins:
     - search
     - markdownextradata
