--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,8 @@ nav:
     - "10. What's Next?": whats-next.md
 theme:
   name: material
+  features:
+    - content.code.copy
   palette:
 
   # Palette toggle for automatic mode
